@@ -109,21 +109,22 @@ typedef struct _GimpLayerMask       GimpLayerMask;
 
 /*  undo objects  */
 
-typedef struct _GimpUndo            GimpUndo;
-typedef struct _GimpImageUndo       GimpImageUndo;
-typedef struct _GimpItemUndo        GimpItemUndo;
-typedef struct _GimpItemPropUndo    GimpItemPropUndo;
-typedef struct _GimpChannelUndo     GimpChannelUndo;
-typedef struct _GimpChannelPropUndo GimpChannelPropUndo;
-typedef struct _GimpDrawableUndo    GimpDrawableUndo;
-typedef struct _GimpLayerMaskUndo   GimpLayerMaskUndo;
-typedef struct _GimpLayerUndo       GimpLayerUndo;
-typedef struct _GimpLayerPropUndo   GimpLayerPropUndo;
-typedef struct _GimpMaskUndo        GimpMaskUndo;
-typedef struct _GimpGuideUndo       GimpGuideUndo;
-typedef struct _GimpSamplePointUndo GimpSamplePointUndo;
-typedef struct _GimpUndoStack       GimpUndoStack;
-typedef struct _GimpUndoAccumulator GimpUndoAccumulator;
+typedef struct _GimpUndo              GimpUndo;
+typedef struct _GimpImageUndo         GimpImageUndo;
+typedef struct _GimpItemUndo          GimpItemUndo;
+typedef struct _GimpItemPropUndo      GimpItemPropUndo;
+typedef struct _GimpChannelUndo       GimpChannelUndo;
+typedef struct _GimpChannelPropUndo   GimpChannelPropUndo;
+typedef struct _GimpDrawableUndo      GimpDrawableUndo;
+typedef struct _GimpLayerMaskUndo     GimpLayerMaskUndo;
+typedef struct _GimpLayerMaskPropUndo GimpLayerMaskPropUndo;
+typedef struct _GimpLayerUndo         GimpLayerUndo;
+typedef struct _GimpLayerPropUndo     GimpLayerPropUndo;
+typedef struct _GimpMaskUndo          GimpMaskUndo;
+typedef struct _GimpGuideUndo         GimpGuideUndo;
+typedef struct _GimpSamplePointUndo   GimpSamplePointUndo;
+typedef struct _GimpUndoStack         GimpUndoStack;
+typedef struct _GimpUndoAccumulator   GimpUndoAccumulator;
 
 
 /*  misc objects  */
